force-app/main/default/objects/Employee_Attendance_Quota__c/Employee_Attendance_Quota__c.object-meta.xml
<CustomObject>
    <label>Employee Attendance Quota</label>
    <nameField>
        <label>Employee Attendance Quota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Attendance Quotas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>