force-app/main/default/objects/Employee_Attendance_Quota__c/fields/Attendance_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Attendance Type(This field was created for NPL MA).</description>
    <label>Attendance Type</label>
    <referenceTo>AttendanceType__c</referenceTo>
    <relationshipLabel>Employee Attendance Quotas</relationshipLabel>
    <relationshipName>Employee_Attendance_Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>