force-app/main/default/objects/Employee_Attendance_Quota__c/fields/Deducted__c.field-meta.xml
<CustomField>
    <fullName>Deducted__c</fullName>
    <description>Deducted Hours(This field was created for NPL MA).</description>
    <label>Deducted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>