force-app/main/default/objects/Employee_Attendance_Quota__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Employee whose quota is described(This field was created for NPL MA).</description>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Attendance Quotas</relationshipLabel>
    <relationshipName>Employee_Attendance_Quotas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>