force-app/main/default/objects/Employee_Attendance_Quota__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <description>Quota Hours(This field was created for NPL MA).</description>
    <label>Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>