force-app/main/default/objects/Employee_Attendance_Quota__c/fields/Quota_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Quota_Begin_Date__c</fullName>
    <description>Begin Date of the Quota(This field was created for NPL MA).</description>
    <label>Quota Begin Date</label>
    <type>Date</type>
</CustomField>