force-app/main/default/objects/Employee_Attendance_Quota__c/fields/Quota_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Quota_End_Date__c</fullName>
    <description>End Date of the Quota(This field was created for NPL MA).</description>
    <label>Quota End Date</label>
    <type>Date</type>
</CustomField>