force-app/main/default/objects/Employee_Attendance_Quota__c/fields/QuotaText__c.field-meta.xml
<CustomField>
    <fullName>QuotaText__c</fullName>
    <description>Text of the quota like sick Quota, vacation quota(This field was created for NPL MA).</description>
    <label>QuotaText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>