force-app/main/default/objects/Employee_Attendance_Quota__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Unit of measurement like &quot;hours&quot;(This field was created for NPL MA).</description>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>