force-app/main/default/objects/Employee_Attendance_Quota__c/fields/Wage_Type__c.field-meta.xml
<CustomField>
    <fullName>Wage_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Wage Type(This field was created for NPL MA).</description>
    <label>Wage Type</label>
    <referenceTo>WageType__c</referenceTo>
    <relationshipLabel>Employee Attendance Quotas</relationshipLabel>
    <relationshipName>Employee_Attendance_Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>